# pdp

./: README.md  cli.py  pdp.py  pdp_config.py  pdp_errors.py  pyproject.toml  requirements.txt  task.py
pdp/: pdp.py  pdp_config.py  pdp_errors.py  task.py
tests/: test_cli.py  test_pdp.py  test_pdp_config.py  test_task.py
